--- a/2023_fall/lec03/lec03_notebook.ipynb
+++ b/2023_fall/lec03/lec03_notebook.ipynb
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "c1361dec",
    "metadata": {},
    "outputs": [
@@ -917,7 +917,7 @@
      "text": [
       "Help on function cancellation in module homework3:\n",
       "\n",
-      "cancellation(list, stop_word)\n",
+      "cancellation(input_list, stop_word)\n",
       "    Copy elements one by one from input_list into output_list. \n",
       "    If one of the elements is equal to the stop_word, then stop the function,\n",
       "    and return what you have so far.\n",
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "6ce3a132",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "a8456bf1",
    "metadata": {},
    "outputs": [
@@ -1114,97 +1114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "00962b42",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "EEEFEE\n",
-      "======================================================================\n",
-      "ERROR: test_cancellation_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 12, in test_cancellation_output\n",
-      "    a = homework3.cancellation([True, False, \"a\", \"b\", \"c\", 1, 2, 3], \"b\")\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py\", line 10, in cancellation\n",
-      "    for x in input_list:\n",
-      "NameError: name 'input_list' is not defined\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_cancellation_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 8, in test_cancellation_type\n",
-      "    a = homework3.cancellation([], \"a\")\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py\", line 10, in cancellation\n",
-      "    for x in input_list:\n",
-      "NameError: name 'input_list' is not defined\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_copy_all_but_skip_word_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 23, in test_copy_all_but_skip_word_output\n",
-      "    a = homework3.copy_all_but_skip_word([True, \"b\", False, \"a\", \"b\", \"c\", 1, 2, 3], \"b\")\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py\", line 24, in copy_all_but_skip_word\n",
-      "    if x==stop_word:\n",
-      "NameError: name 'stop_word' is not defined\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_my_average_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 35, in test_my_average_output\n",
-      "    a = homework3.my_average([4, 3, 2, 1, 0, -1, -2, -1.6])\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py\", line 36, in my_average\n",
-      "    if x==stop_word:\n",
-      "NameError: name 'stop_word' is not defined\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_my_average_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 31, in test_my_average_type\n",
-      "    a = homework3.my_average([0.14])\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py\", line 36, in my_average\n",
-      "    if x==stop_word:\n",
-      "NameError: name 'stop_word' is not defined\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_copy_all_but_skip_word_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 20, in test_copy_all_but_skip_word_type\n",
-      "    self.assertIs(type(a), type([]), \"copy_all_but_skip_word([]) should return a %s but it returns a %s\"%(type([]),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'list'> : copy_all_but_skip_word([]) should return a <class 'list'> but it returns a <class 'NoneType'>\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.004s\n",
-      "\n",
-      "FAILED (failures=1, errors=5)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 successes out of 6 tests run\n",
-      "Score: 0%\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'stop_word' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mhomework3\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mimportlib\u001b[39;00m\n\u001b[0;32m      2\u001b[0m importlib\u001b[38;5;241m.\u001b[39mreload(homework3)\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mhomework3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmy_average\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m84\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m61\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m99\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(homework3\u001b[38;5;241m.\u001b[39mmy_average([ \u001b[38;5;241m0.31147488\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.18365408\u001b[39m,  \u001b[38;5;241m0.27358631\u001b[39m, \u001b[38;5;241m5\u001b[39m]))\n",
-      "File \u001b[1;32m~\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py:36\u001b[0m, in \u001b[0;36mmy_average\u001b[1;34m(input_list)\u001b[0m\n\u001b[0;32m     34\u001b[0m outputlist \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m input_list:\n\u001b[1;32m---> 36\u001b[0m    \u001b[38;5;28;01mif\u001b[39;00m x\u001b[38;5;241m==\u001b[39m\u001b[43mstop_word\u001b[49m:\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     38\u001b[0m     outputlist\u001b[38;5;241m.\u001b[39mappend(x)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'stop_word' is not defined"
+      "81.33333333333333\n",
+      "1.3503517775\n"
      ]
     }
    ],
@@ -1232,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "afd1f489",
    "metadata": {},
    "outputs": [
@@ -1240,77 +1159,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EEEFEE\n",
-      "======================================================================\n",
-      "ERROR: test_cancellation_output (grade.Test)\n",
+      "......\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 12, in test_cancellation_output\n",
-      "    a = homework3.cancellation([True, False, \"a\", \"b\", \"c\", 1, 2, 3], \"b\")\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py\", line 10, in cancellation\n",
-      "    for x in input_list:\n",
-      "NameError: name 'input_list' is not defined\n",
+      "Ran 6 tests in 0.002s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_cancellation_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 8, in test_cancellation_type\n",
-      "    a = homework3.cancellation([], \"a\")\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py\", line 10, in cancellation\n",
-      "    for x in input_list:\n",
-      "NameError: name 'input_list' is not defined\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_copy_all_but_skip_word_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 23, in test_copy_all_but_skip_word_output\n",
-      "    a = homework3.copy_all_but_skip_word([True, \"b\", False, \"a\", \"b\", \"c\", 1, 2, 3], \"b\")\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py\", line 24, in copy_all_but_skip_word\n",
-      "    if x==stop_word:\n",
-      "NameError: name 'stop_word' is not defined\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_my_average_output (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 35, in test_my_average_output\n",
-      "    a = homework3.my_average([4, 3, 2, 1, 0, -1, -2, -1.6])\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py\", line 36, in my_average\n",
-      "    if x==stop_word:\n",
-      "NameError: name 'stop_word' is not defined\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_my_average_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 31, in test_my_average_type\n",
-      "    a = homework3.my_average([0.14])\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\homework3.py\", line 36, in my_average\n",
-      "    if x==stop_word:\n",
-      "NameError: name 'stop_word' is not defined\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_copy_all_but_skip_word_type (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec03\\grade.py\", line 20, in test_copy_all_but_skip_word_type\n",
-      "    self.assertIs(type(a), type([]), \"copy_all_but_skip_word([]) should return a %s but it returns a %s\"%(type([]),type(a)))\n",
-      "AssertionError: <class 'NoneType'> is not <class 'list'> : copy_all_but_skip_word([]) should return a <class 'list'> but it returns a <class 'NoneType'>\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.005s\n",
-      "\n",
-      "FAILED (failures=1, errors=5)\n"
+      "OK\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 successes out of 6 tests run\n",
-      "Score: 0%\n"
+      "6 successes out of 6 tests run\n",
+      "Score: 100%\n"
      ]
     },
     {
@@ -1319,7 +1180,7 @@
        "<module 'grade' from 'C:\\\\Users\\\\XU HUI\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec03\\\\grade.py'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
