--- a/2023_fall/lec09/lec09_notebook.ipynb
+++ b/2023_fall/lec09/lec09_notebook.ipynb
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "d1d7fa31",
    "metadata": {},
    "outputs": [
@@ -825,95 +825,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EEE\n",
-      "======================================================================\n",
-      "ERROR: test_synthesis_correct_length (grade.Test)\n",
+      "...\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/grade.py\", line 11, in test_synthesis_correct_length\n",
-      "    x = homework9.fourier_synthesis(20, X, 80)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/homework9.py\", line 19, in fourier_synthesis\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
+      "Ran 3 tests in 0.008s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_synthesis_magnitude (grade.Test)\n",
+      "OK\n",
+      "...\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/grade.py\", line 16, in test_synthesis_magnitude\n",
-      "    x = homework9.fourier_synthesis(20, X, 80)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/homework9.py\", line 19, in fourier_synthesis\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
+      "Ran 3 tests in 0.006s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_synthesis_phase (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/grade.py\", line 24, in test_synthesis_phase\n",
-      "    x = homework9.fourier_synthesis(20, X, 80)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/homework9.py\", line 19, in fourier_synthesis\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.004s\n",
-      "\n",
-      "FAILED (errors=3)\n",
-      "EEE\n",
-      "======================================================================\n",
-      "ERROR: test_synthesis_correct_length (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/grade.py\", line 11, in test_synthesis_correct_length\n",
-      "    x = homework9.fourier_synthesis(20, X, 80)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/homework9.py\", line 19, in fourier_synthesis\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_synthesis_magnitude (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/grade.py\", line 16, in test_synthesis_magnitude\n",
-      "    x = homework9.fourier_synthesis(20, X, 80)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/homework9.py\", line 19, in fourier_synthesis\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_synthesis_phase (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/grade.py\", line 24, in test_synthesis_phase\n",
-      "    x = homework9.fourier_synthesis(20, X, 80)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/homework9.py\", line 19, in fourier_synthesis\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.005s\n",
-      "\n",
-      "FAILED (errors=3)\n"
+      "OK\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 successes out of 3 tests run\n",
-      "Score: 0%\n",
-      "0 successes out of 3 tests run\n",
-      "Score: 0%\n"
+      "3 successes out of 3 tests run\n",
+      "Score: 100%\n",
+      "3 successes out of 3 tests run\n",
+      "Score: 100%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<module 'grade' from '/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec09/grade.py'>"
+       "<module 'grade' from 'C:\\\\Users\\\\XU HUI\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec09\\\\grade.py'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
