--- a/2023_fall/lec10/lec10_notebook.ipynb
+++ b/2023_fall/lec10/lec10_notebook.ipynb
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "98a99327",
    "metadata": {},
    "outputs": [
@@ -814,95 +814,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EEE\n",
-      "======================================================================\n",
-      "ERROR: test_frames_to_stft (grade.Test)\n",
+      "...\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 28, in test_frames_to_stft\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
+      "Ran 3 tests in 0.011s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_stft_to_spectrogram (grade.Test)\n",
+      "OK\n",
+      "...\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 46, in test_stft_to_spectrogram\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
+      "Ran 3 tests in 0.009s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_waveform_to_frames (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 13, in test_waveform_to_frames\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.003s\n",
-      "\n",
-      "FAILED (errors=3)\n",
-      "EEE\n",
-      "======================================================================\n",
-      "ERROR: test_frames_to_stft (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 28, in test_frames_to_stft\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_stft_to_spectrogram (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 46, in test_stft_to_spectrogram\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_waveform_to_frames (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py\", line 13, in test_waveform_to_frames\n",
-      "    frames = homework10.waveform_to_frames(speech, frame_length, step)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/homework10.py\", line 19, in waveform_to_frames\n",
-      "    raise RuntimeError(\"You need to change this part\")\n",
-      "RuntimeError: You need to change this part\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.004s\n",
-      "\n",
-      "FAILED (errors=3)\n"
+      "OK\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 successes out of 3 tests run\n",
-      "Score: 0%\n",
-      "0 successes out of 3 tests run\n",
-      "Score: 0%\n"
+      "3 successes out of 3 tests run\n",
+      "Score: 100%\n",
+      "3 successes out of 3 tests run\n",
+      "Score: 100%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<module 'grade' from '/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec10/grade.py'>"
+       "<module 'grade' from 'C:\\\\Users\\\\XU HUI\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec10\\\\grade.py'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
