--- a/2023_fall/lec11/lec11_notebook.ipynb
+++ b/2023_fall/lec11/lec11_notebook.ipynb
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "38daa6fc",
    "metadata": {},
    "outputs": [
@@ -562,90 +562,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EFE\n",
+      "EEE\n",
       "======================================================================\n",
       "ERROR: test_method_returns_str (grade.Test)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 25, in test_method_returns_str\n",
-      "    transcription = homework11.transcribe_wavefile(\"webdata.wav\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec11\\grade.py\", line 24, in test_method_returns_str\n",
+      "    import homework11\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec11\\homework11.py\", line 1, in <module>\n",
+      "    import speech_recognition\n",
+      "ModuleNotFoundError: No module named 'speech_recognition'\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_method_runs (grade.Test)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec11\\grade.py\", line 16, in test_method_runs\n",
+      "    import homework11\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec11\\homework11.py\", line 1, in <module>\n",
+      "    import speech_recognition\n",
+      "ModuleNotFoundError: No module named 'speech_recognition'\n",
       "\n",
       "======================================================================\n",
       "ERROR: test_method_works_with_known_input (grade.Test)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 35, in test_method_works_with_known_input\n",
-      "    transcription = homework11.transcribe_wavefile(filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_method_runs (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 18, in test_method_runs\n",
-      "    transcription = homework11.transcribe_wavefile(\"webdata.wav\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 20, in test_method_runs\n",
-      "    self.fail(\"homework11.transcribe_wavefile does not run (has errors)\")\n",
-      "AssertionError: homework11.transcribe_wavefile does not run (has errors)\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec11\\grade.py\", line 33, in test_method_works_with_known_input\n",
+      "    import homework11\n",
+      "  File \"C:\\Users\\XU HUI\\Documents\\GitHub\\intro_speech_understanding\\2023_fall\\lec11\\homework11.py\", line 1, in <module>\n",
+      "    import speech_recognition\n",
+      "ModuleNotFoundError: No module named 'speech_recognition'\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.003s\n",
+      "Ran 3 tests in 0.008s\n",
       "\n",
-      "FAILED (failures=1, errors=2)\n",
-      "EFE\n",
-      "======================================================================\n",
-      "ERROR: test_method_returns_str (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 25, in test_method_returns_str\n",
-      "    transcription = homework11.transcribe_wavefile(\"webdata.wav\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_method_works_with_known_input (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 35, in test_method_works_with_known_input\n",
-      "    transcription = homework11.transcribe_wavefile(filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_method_runs (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 18, in test_method_runs\n",
-      "    transcription = homework11.transcribe_wavefile(\"webdata.wav\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 20, in test_method_runs\n",
-      "    self.fail(\"homework11.transcribe_wavefile does not run (has errors)\")\n",
-      "AssertionError: homework11.transcribe_wavefile does not run (has errors)\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.003s\n",
-      "\n",
-      "FAILED (failures=1, errors=2)\n"
+      "FAILED (errors=3)\n"
      ]
     },
     {
@@ -653,18 +604,16 @@
      "output_type": "stream",
      "text": [
       "0 successes out of 3 tests run\n",
-      "Score: 0%\n",
-      "0 successes out of 3 tests run\n",
       "Score: 0%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<module 'grade' from '/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py'>"
+       "<module 'grade' from 'C:\\\\Users\\\\XU HUI\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec11\\\\grade.py'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
